--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "test": "jest --coverage",
-    "test:ci": "jest --ci"
+    "test": "jest --coverage --passWithNoTests",
+    "test:ci": "jest --ci --passWithNoTests"
   },
   "dependencies": {
     "next": "16.0.1",
