--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "test:ci": "jest --ci --passWithNoTests"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "next": "16.0.1",
     "pnpm": "^10.20.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -22,6 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "daisyui": "^5.4.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "jest": "^30.2.0",
