--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "pnpm": "^10.20.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-syntax-highlighter": "^16.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -24,6 +25,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "daisyui": "^5.4.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
