--- a/package.json
+++ b/package.json
@@ -11,26 +11,27 @@
     "test:ci": "jest --ci --passWithNoTests"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "clsx": "^2.1.1",
     "next": "16.0.1",
     "pnpm": "^10.20.0",
+    "prism-react-renderer": "^2.4.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-icons": "^5.5.0",
-    "react-syntax-highlighter": "^16.1.0"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
     "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/react-syntax-highlighter": "^15.5.13",
-    "daisyui": "^5.4.3",
+    "autoprefixer": "^10.4.21",
+    "daisyui": "^4.12.14",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "jest": "^30.2.0",
-    "tailwindcss": "^4",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.17",
     "ts-jest": "^29.4.5",
     "typescript": "^5"
   }
