--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "prism-react-renderer": "^2.4.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "vm-browserify": "^1.1.2"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
